// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby="_r_0_-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <div
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-z54li0"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <div
              class="rcx-box rcx-box--full rcx-modal__header-text rcx-css-trljwa rcx-css-lma364"
            >
              <h2
                class="rcx-box rcx-box--full rcx-modal__title"
                id="_r_0_-title"
              >
                Manage_license
              </h2>
            </div>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-r1bpeb"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-rwaa9d"
            >
              Manage_license_description
            </div>
            <input
              accept=".txt,text/plain"
              aria-label="Upload_license_file"
              class="rcx-box rcx-box--full rcx-css-1jvv3p7"
              type="file"
            />
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <label
                class="rcx-box rcx-box--full rcx-field__label rcx-label"
                for="react-aria-_r_1_-label"
              >
                License_key
              </label>
              <span
                class="rcx-box rcx-box--full rcx-field__row"
              >
                <textarea
                  aria-describedby=""
                  aria-invalid="false"
                  class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements rcx-box--animated rcx-input-box--type-textarea rcx-input-box rcx-css-vt30bf"
                  cols="1"
                  id="react-aria-_r_1_-label"
                  placeholder="Drag_and_drop_license_placeholder"
                  rows="4"
                  size="1"
                  style="font-family: monospace;"
                />
              </span>
            </div>
            <div
              class="rcx-button-group rcx-button-group--align-start"
              role="group"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small rcx-button"
                type="button"
              >
                <span
                  class="rcx-button--content"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-upload rcx-icon rcx-css-1hdf9ok"
                  >
                    
                  </i>
                  Upload_license_file
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Apply_license
              </span>
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </div>
</body>
`;

exports[`renders InvalidLicense without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby="_r_2_-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <div
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-z54li0"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <div
              class="rcx-box rcx-box--full rcx-modal__header-text rcx-css-trljwa rcx-css-lma364"
            >
              <h2
                class="rcx-box rcx-box--full rcx-modal__title"
                id="_r_2_-title"
              >
                Manage_license
              </h2>
            </div>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-r1bpeb"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-rwaa9d"
            >
              Manage_license_description
            </div>
            <input
              accept=".txt,text/plain"
              aria-label="Upload_license_file"
              class="rcx-box rcx-box--full rcx-css-1jvv3p7"
              type="file"
            />
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <label
                class="rcx-box rcx-box--full rcx-field__label rcx-label"
                for="react-aria-_r_3_-label"
              >
                License_key
              </label>
              <span
                class="rcx-box rcx-box--full rcx-field__row"
              >
                <textarea
                  aria-describedby=""
                  aria-invalid="false"
                  class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements rcx-box--animated rcx-input-box--type-textarea rcx-input-box rcx-css-vt30bf"
                  cols="1"
                  id="react-aria-_r_3_-label"
                  placeholder="Drag_and_drop_license_placeholder"
                  rows="4"
                  size="1"
                  style="font-family: monospace;"
                />
              </span>
            </div>
            <div
              class="rcx-button-group rcx-button-group--align-start"
              role="group"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small rcx-button"
                type="button"
              >
                <span
                  class="rcx-button--content"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-upload rcx-icon rcx-css-1hdf9ok"
                  >
                    
                  </i>
                  Upload_license_file
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Apply_license
              </span>
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </div>
</body>
`;

exports[`renders WithCurrentLicense without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby="_r_4_-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <div
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-z54li0"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <div
              class="rcx-box rcx-box--full rcx-modal__header-text rcx-css-trljwa rcx-css-lma364"
            >
              <h2
                class="rcx-box rcx-box--full rcx-modal__title"
                id="_r_4_-title"
              >
                Manage_license
              </h2>
            </div>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-r1bpeb"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-rwaa9d"
            >
              Manage_license_description
            </div>
            <input
              accept=".txt,text/plain"
              aria-label="Upload_license_file"
              class="rcx-box rcx-box--full rcx-css-1jvv3p7"
              type="file"
            />
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <label
                class="rcx-box rcx-box--full rcx-field__label rcx-label"
                for="react-aria-_r_5_-label"
              >
                License_key
              </label>
              <span
                class="rcx-box rcx-box--full rcx-field__row"
              >
                <textarea
                  aria-describedby=""
                  aria-invalid="false"
                  class="rcx-box rcx-box--full rcx-box--with-block-elements rcx-box--with-inline-elements rcx-box--animated rcx-input-box--type-textarea rcx-input-box rcx-css-vt30bf"
                  cols="1"
                  id="react-aria-_r_5_-label"
                  placeholder="Drag_and_drop_license_placeholder"
                  rows="4"
                  size="1"
                  style="font-family: monospace;"
                >
                  RCLICENSE-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                </textarea>
              </span>
            </div>
            <div
              class="rcx-button-group rcx-button-group--align-start"
              role="group"
            >
              <button
                class="rcx-box rcx-box--full rcx-button--small rcx-button"
                type="button"
              >
                <span
                  class="rcx-button--content"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-upload rcx-icon rcx-css-1hdf9ok"
                  >
                    
                  </i>
                  Upload_license_file
                </span>
              </button>
              <button
                class="rcx-box rcx-box--full rcx-button--small rcx-button--secondary-danger rcx-button"
                type="button"
              >
                <span
                  class="rcx-button--content"
                >
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-icon--name-trash rcx-icon rcx-css-1hdf9ok"
                  >
                    
                  </i>
                  Remove_license
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Apply_license
              </span>
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </div>
</body>
`;
